# microagent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  agent.py  api.py  config.py  db.py  eval.py  logger.py  microagent.py  prompts.py  pyproject.toml  test_api.sh  tools.py
.github/workflows/: ci.yml
evals/: tasks-hard-v2.txt  tasks-v1.txt  tasks-v2.txt  tasks.txt
prompts/: eval-v1.1.toml  eval-v1.2.toml  eval-v1.3.toml  eval-v1.4.toml  eval-v1.toml  v1.toml  v2.1.toml  v2.2.toml  v2.3.toml  v2.4.toml  v2.5.toml  v2.6.toml  v2.7.toml  v2.8.toml  v2.toml
tests/: conftest.py  test_agent.py  test_api.py  test_eval.py  test_microagent.py
